--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <h1>HELLO, I'M DOKTOR.</h1>
+    <H2>Welcome my site.</H2>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
